# ai-shopping-research-agent

./: LICENSE  README.md
agent/: checkpointer.py  graph.py  main.py  pyproject.toml  state.py
agent/data/: shopping_researcher.db
agent/nodes/: aggregator.py  evaluator.py  orchestrator.py  search.py  traffic_node.py  worker.py
