[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.0",
    "langchain-core>=1.2.25",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.4",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "tavily>=1.1.0",
    "tavily-python>=0.7.23",
    "typing-extensions>=4.15.0",
]
